log/build_2022-09-03_00-47-59/pkg_laser/stderr.log
  File "/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py", line 135
    elif(!seguroNordeste && seguroNoroeste && seguroLeste):
         ^
SyntaxError: invalid syntax

